spade-tests/src/snapshots/spade_tests__hir_lowering__tests__expected_value.snap
---
source: spade-tests/src/hir_lowering.rs
---
fn ff() -> bool { true }

entity f(clk: clock) -> bool {
    let a = ff;
    true
}


error: Expected ff to be a value
  ┌─ testinput:4:13
  │
1 │ fn ff() -> bool { true }
  │ ------------------------ ff is a unit
  ·
4 │     let a = ff;
  │             ^^ Expected a value here


